--- a/Add Image 2.html
+++ b/Add Image 2.html
@@ -24,7 +24,7 @@
 		<script>
     var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 1, 1000);
-    camera.position.set(2, 3, 5);
+    camera.position.z = 5;
     var renderer = new THREE.WebGLRenderer({
       antialias: true
     });
@@ -43,8 +43,8 @@
     var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
     cube.castShadow = true;
     // rotate and position the plane
-    cube.rotation.x = -0.5 * Math.PI;
-    cube.position.set(0,-1,0);
+    //cube.rotation.x = -0.5 * Math.PI;
+    //cube.position.set(0,-1,0);
     // add the plane to the scene
     scene.add(cube);
 
