--- a/Add Image 2.html
+++ b/Add Image 2.html
@@ -37,16 +37,42 @@
     light.position.setScalar(10);
     scene.add(light);
 
+		/*//create a cube
 		var cubeGeometry = new THREE.BoxGeometry(3,3,3);
     var texture = new THREE.TextureLoader().load( 'https://cywarr.github.io/small-shop/03db80b70ecfc07e84e6dd2589d0b14c57414fb8[1].jpeg' );
     var cubeMaterial = new THREE.MeshLambertMaterial( { map: texture } );
     var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
     cube.castShadow = true;
-    // rotate and position the plane
-    //cube.rotation.x = -0.5 * Math.PI;
-    //cube.position.set(0,-1,0);
     // add the plane to the scene
-    scene.add(cube);
+    scene.add(cube);*/
+
+		//create a cube with round edges
+		function createBoxWithRoundedEdges( width, height, depth, radius0, smoothness ) {
+  		let shape = new THREE.Shape();
+  		let eps = 0.00001;
+  		let radius = radius0 - eps;
+  		shape.absarc( eps, eps, eps, -Math.PI / 2, -Math.PI, true );
+  		shape.absarc( eps, height -  radius * 2, eps, Math.PI, Math.PI / 2, true );
+  		shape.absarc( width - radius * 2, height -  radius * 2, eps, Math.PI / 2, 0, true );
+  		shape.absarc( width - radius * 2, eps, eps, 0, -Math.PI / 2, true );
+  		let geometry = new THREE.ExtrudeBufferGeometry( shape, {
+    		amount: depth - radius0 * 2,
+    		bevelEnabled: true,
+    		bevelSegments: smoothness * 2,
+    		steps: 1,
+    		bevelSize: radius,
+    		bevelThickness: radius0,
+    		curveSegments: smoothness
+  		});
+
+  		geometry.center();
+
+  		return geometry;
+		}
+		var cubeMaterial = new THREE.MeshNormalMaterial();
+		var cube = new THREE.Mesh( createBoxWithRoundedEdges( 3.8, 1.5, 1.7, 4.6 / 9, 16 ), cubeMaterial );
+  	cube.scale.setScalar( 1.25 );
+  	scene.add( cube );
 
     render();
 
