--- a/FemaleObjLoader.html
+++ b/FemaleObjLoader.html
@@ -79,10 +79,20 @@
                 objLoader.load('female-croupier-2013-03-26.obj', function (object) {
 
                     scene.add(object);
+                    object.traverse( function ( child ) {
+      	               if ( child.isMesh ) {
+      		               var wireframeGeomtry = new THREE.WireframeGeometry( child.geometry );
+      		                 var wireframeMaterial = new THREE.LineBasicMaterial( { color: 0xffffff } );
+      		                   var wireframe = new THREE.LineSegments( wireframeGeomtry, wireframeMaterial );
+      		                     child.add(wireframe);
+                     }
+                   });
 
                 });
 
             });
+
+
 
             /* Renderer */
 
